# witer

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
examples/: koyote.rs  minimal.rs  multi_threaded.rs  opengl.rs  rework.rs  simple.rs  single_threaded.rs  threaded.rs  wgpu.rs
examples/common/: camera.rs  egui.rs  frame.rs  mod.rs  model.rs  shader.wgsl  simple_shader.wgsl  window.rs
examples/foxy/: Cargo.toml  README.md
examples/foxy/src/: core.rs  lib.rs  prelude.rs
examples/foxy/src/core/: builder.rs  framework.rs  message.rs  runnable.rs  state.rs
examples/foxy_renderer/: Cargo.toml  README.md
examples/foxy_renderer/assets/foxy_renderer/shaders/: gradient.comp
examples/foxy_renderer/assets/foxy_renderer/shaders/simple/: simple.frag  simple.vert
examples/foxy_renderer/src/: error.rs  lib.rs  renderer.rs
examples/foxy_renderer/src/renderer/: debug.rs  device.rs  frame_data.rs  image_format.rs  instance.rs  render_data.rs  shader.rs  swapchain.rs
examples/koyote/: Cargo.toml
examples/koyote/src/: main.rs
examples/old/: multi_threaded.rs  single_threaded.rs
examples/ookami/: Cargo.toml
examples/ookami/src/: main.rs
examples/util/: mod.rs
src/: compat.rs  debug.rs  egui.rs  error.rs  glutin.rs  handle.rs  lib.rs  main.rs  opengl.rs  prelude.rs  utilities.rs  window.rs
src/compat/: egui.rs
src/compat/egui/: clipboard.rs  window_settings.rs
src/debug/: error.rs  validation.rs
src/window/: builder.rs  callback.rs  command.rs  cursor.rs  data.rs  frame.rs  input.rs  main_message.rs  message.rs  opengl.rs  procedure.rs  settings.rs  stage.rs  state.rs  sync.rs  window_loop.rs  window_message.rs
src/window/input/: button.rs  key.rs  keyboard.rs  modifier.rs  mouse.rs  state.rs
