[package]
name        = "ezwin"
description = "Easy, minimal Win32 window creation"
version     = "3.3.2"
edition     = "2021"
authors     = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
license     = "MIT OR Apache-2.0"
readme      = "README.md"
keywords    = ["win32", "windows", "windowing"]
categories  = ["game-development", "rendering", "gui"]
repository  = "https://github.com/GTLugo/ezwin"

[features]
default = ["rwh_06"]
rwh_05  = ["dep:rwh_05"]
rwh_06  = ["dep:rwh_06"]

[dependencies]
thiserror = "1.0"
tracing   = "0.1"
strum     = { version = "0.26", features = ["derive"] }

rwh_05 = { package = "raw-window-handle", version = "0.5.2", features = ["std"], optional = true }
rwh_06 = { package = "raw-window-handle", version = "0.6", features = ["std"], optional = true }

[dependencies.windows]
version  = "0.54"
features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell"]

[dev-dependencies]
foxy_time = { version = "1", path = "../foxy_time" }
wgpu      = "0.19"
pollster  = "0.3"
