[package]
name        = "witer"
description = "An iterator-based Win32 windowing library"
version     = "0.5.0"
edition     = "2021"
authors     = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
license     = "MIT OR Apache-2.0"
readme      = "README.md"
keywords    = ["win32", "windows", "windowing"]
categories  = ["game-development", "rendering", "gui"]
repository  = "https://github.com/witer-rs/witer"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["rwh_06"]
rwh_05  = ["dep:rwh_05"]
rwh_06  = ["dep:rwh_06"]
# opengl  = ["dep:glium", "rwh_05"]
# egui = ["dep:egui"]

[dependencies]
thiserror = "1.0"
tracing   = { version = "0.1", default-features = false }
crossbeam = "0.8"

rwh_05 = { package = "raw-window-handle", version = "0.5.2", features = ["std"], optional = true }
rwh_06 = { package = "raw-window-handle", version = "0.6", features = ["std"], optional = true }

# glium = { version = "0.34", optional = true }
# egui = { version = "0.26", optional = true }

[dependencies.windows]
version  = "0.54"
features = ["UI_ViewManagement", "Win32_Devices_HumanInterfaceDevice", "Win32_Foundation", "Win32_Security", "Win32_System_SystemInformation", "Win32_System_Threading", "Win32_UI_Accessibility", "Win32_UI_Controls", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell_Common", "Win32_UI_Shell_PropertiesSystem"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
foxy_time          = { version = "1", path = "../foxy_time" }
pollster           = "0.3"
wgpu               = "0.19"

[[example]]
name              = "opengl"
required-features = ["opengl"]
