[package]
name              = "foxy_renderer"
version           = "0.1.0"
edition           = "2021"
authors           = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
repository        = "https://github.com/GTLugo/foxy"
readme            = "README.md"
description       = "foxy"
keywords          = ["foxy"]
categories        = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tracing   = "0.1"

bytemuck   = "1.13"
byteorder  = "1.5"
itertools  = "0.12"
strum      = { version = "0.26", features = ["derive"] }
enumflags2 = "0.7"

foxy_time  = { version = "1.0", path = "../../../foxy_time" }
foxy_log   = { version = "1.0", path = "../../../foxy_log" }
foxy_utils = { version = "0.3", path = "../../../foxy_utils" }

ezwin = { version = "2", path = "../../", features = ["rwh_05"], default-features = false }

vulkano         = "0.34"
vulkano-shaders = "0.34"

egui = "0.26"
