[package]
name    = "koyote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tracing   = "0.1"

crossbeam  = "0.8"
enumflags2 = "0.7"
strum      = { version = "0.26", features = ["derive"] }
itertools  = "0.12"

ezwin     = { version = "2", path = "../../", features = ["rwh_06"], default-features = false }
foxy_time = { version = "1", path = "../../../foxy_time" }

wgpu = "0.19"
pollster = "0.3"